	* fix python binding for torrent_info::creation_date()

1.1.10 release

	* fix issue in udp_socket with unusual socket failure
	* split progress_notification alert category into file-, piece- and block progress
	* utp close-reason fix
	* exposed default add_torrent_params flags to python bindings
	* fix redundant flushes of partfile metadata
	* add option to ignore min-interval from trackers on force-reannounce
	* raise default setting for active_limit
	* fall back to copy+remove if rename_file fails
	* improve handling of filesystems not supporting fallocate()
	* force-proxy no longer disables DHT
	* improve connect-boost feature, to make new torrents quickly connect peers

1.1.9 release

	* save both file and piece priorities in resume file
	* added missing stats_metric python binding
	* uTP connections are no longer exempt from rate limits by default
	* fix exporting files from partfile while seeding
	* fix potential deadlock on Windows, caused by performing restricted
	  tasks from within DllMain
	* fix issue when subsequent file priority updates cause torrent to stop

1.1.8 release

	* coalesce reads and writes by default on windows
	* fixed disk I/O performance of checking hashes and creating torrents
	* fix race condition in part_file
	* fix part_file open mode compatibility test
	* fixed race condition in random number generator
	* fix race condition in stat_cache (disk storage)
	* improve error handling of failing to change file priority
	  The API for custom storage implementations was altered
	* set the hidden attribute when creating the part file
	* fix tracker announces reporting more data downloaded than the size of the torrent
	* fix recent regression with force_proxy setting

1.1.7 release

	* don't perform DNS lookups for the DHT bootstrap unless DHT is enabled
	* fix issue where setting file/piece priority would stop checking
	* expose post_dht_stats() to python binding
	* fix backwards compatibility to downloads without partfiles