@@ -43,7 +43,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include <string>
 #include <boost/function/function1.hpp>
 #include <boost/shared_ptr.hpp>
-#include <boost/shared_ptr.hpp>
+#include <boost/noncopyable.hpp>
 
 #include "libtorrent/aux_/disable_warnings_pop.hpp"
 
