@@ -1,3 +1,4 @@
+	* fix missing boost/noncopyable.hpp includes
 	* fix python binding for torrent_info::creation_date()
 
 1.1.10 release
